--- a/style.css
+++ b/style.css
@@ -1,40 +1,20 @@
 div {
 	width: 300px;
+}
+
+.listViewGame {
 	border-bottom: 0.1px solid black;
 }
 
-p {
-	margin-left: 15px;
-	margin-right: 15px;
+#input {
+	margin-left: 25%;
 }
 
-#prev, #favTeam {
-	margin-left: 5%;
-}
-
-#back {
-	float: right;
-	margin-right: 5%;
-}
-
-td {
+#battingHome tr, #battingAway tr, h1 {
 	text-align: center;
 }
 
-#homeAwayName {
-	text-align: center;
-}
-
-.teamCode {
-	width: 50px;
-	text-align: left;
-}
-
-.player {
-	width: 100px; 
-	text-align: left;
-}
-
-.finalScore {
+#btnView {
 	float: right;
+	width: 30%;
 }
